src/test/resources/invalid/typecheck/Null_Arg.vas
class Main is
    this() is
        Integer(null)
    end
end